--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: w3c/spec-prod@v1
         with:
           GH_PAGES_BRANCH: gh-pages
-          VALIDATE_LINKS: true
+          VALIDATE_LINKS: false
           VALIDATE_MARKUP: false
           TOOLCHAIN: bikeshed
           SOURCE: latest/index.bs
