--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,10 +15,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - uses: w3c/spec-prod@v1
+      - uses: joshmoore/spec-prod@main
         with:
           GH_PAGES_BRANCH: gh-pages
           VALIDATE_LINKS: false
           VALIDATE_MARKUP: false
           TOOLCHAIN: bikeshed
-          SOURCE: latest/index.bs
