--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -9,7 +9,7 @@ jobs:
     name: Validation
     strategy:
       matrix:
-        ngff-version:
+        ngff:
           - '0.3'
     runs-on: ubuntu-20.04
     steps:
@@ -18,4 +18,4 @@ jobs:
         with:
           python-version: '3.9'
       - run: python -mpip install --upgrade wheel tox
-      - run: cd ${{ngff-version}} && tox
+      - run: cd ${{matrix.ngff}} && tox
