--- a/0.1/tox.ini
+++ b/0.1/tox.ini
@@ -5,6 +5,7 @@ skipsdist = True
 [testenv]
 deps =
     pytest
+    pytest-httpserver
     jsonschema
 commands =
     pytest tests --color=yes --basetemp={envtmpdir} {posargs:-v}
