--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -14,6 +14,7 @@ jobs:
           - '0.2'
           - '0.3'
           - '0.4'
+          - 'latest'
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
