--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -9,10 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Add comment to PR
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        run: |
-          prnumber="$(basename $(dirname ${{GITHUB_REF}}))"
-          gh release create "$tagname" *.png
-          gh pr comment ${prnumber} -b "Review latest: http://api.csswg.org/bikeshed/?url=https://raw.githubusercontent.com/${github.repository}}/${{github.ref_name}}/latest/index.bs"
+
+      - uses: peter-evans/find-comment@v2
+        id: fc
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: 'github-actions[bot]'
+          body-includes: Automated Review URL
+
+      - uses: peter-evans/create-or-update-comment@v2
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            * [Automated Review URL](http://api.csswg.org/bikeshed/?url=https://raw.githubusercontent.com/${github.repository}}/${{github.ref_name}}/latest/index.bs)
+          edit-mode: replace
