--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -1,16 +1,26 @@
 ---
- name: Add review url
+name: Add review url
 
  on:
    pull_request_target:
 
- jobs:
-   build:
-     runs-on: ubuntu-latest
-     steps:
-       - uses: actions/checkout@v2
-       - name: Add comment to PR
-         env:
-           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-         run: |
-           echo no op to enable the workflow
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: peter-evans/find-comment@v2
+        id: fc
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: 'github-actions[bot]'
+          body-includes: Automated Review URL
+
+      - uses: peter-evans/create-or-update-comment@v2
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            * [Automated Review URL](http://api.csswg.org/bikeshed/?url=https://raw.githubusercontent.com/${github.repository}}/${{github.ref_name}}/latest/index.bs)
+          edit-mode: replace
