--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -15,12 +15,14 @@ jobs:
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
-          body-includes: Automated Review URL
+          body-includes: Automated Review URLs
 
       - uses: peter-evans/create-or-update-comment@v2
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            * [Automated Review URL](http://api.csswg.org/bikeshed/?url=https://raw.githubusercontent.com/${github.repository}}/${{github.ref_name}}/latest/index.bs)
+            #### Automated Review URLs
+            * [render latest/index.bs](http://api.csswg.org/bikeshed/?url=https://raw.githubusercontent.com/${{github.repository}}/${{github.ref_name}}/latest/index.bs)
+            * [diff latest PR](Diff: https://services.w3.org/htmldiff?doc1=https%3A%2F%2Fngff.openmicroscopy.org%2Flatest%2F&doc2=http%3A%2F%2Fapi.csswg.org%2Fbikeshed%2F%3Furl%3Dhttps%3A%2F%2Fraw.githubusercontent.com%2F${{github.repository}}%2F${{github.ref_name}}%2Flatest%2Findex.bs)
           edit-mode: replace
