--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -24,8 +24,12 @@ jobs:
             * [render latest/index.bs](http://api.csswg.org/bikeshed/?url=https://raw.githubusercontent.com/ome/ngff/${{ github.sha }}/latest/index.bs)
             * [diff latest modified](https://services.w3.org/htmldiff?doc1=https%3A%2F%2Fngff.openmicroscopy.org%2Flatest%2F&doc2=http%3A%2F%2Fapi.csswg.org%2Fbikeshed%2F%3Furl%3Dhttps%3A%2F%2Fraw.githubusercontent.com%2Fome%2Fngff%2F${{  github.sha }}%2Flatest%2Findex.bs)
             * <details><summary>Debugging Info</summary>
-              * github.sha: ${{ github.sha }}
-              * github.event.pull_request.base.sha: ${{ github.event.pull_request.base.sha }}
-              * github.head.ref: ${{ github.head.ref }}
+
+              - github.sha: ${{ github.sha }}
+
+              - github.event.pull_request: ${{ toJSON( github.event.pull_request ) }}
+
+              - github.head.ref: ${{ github.head.ref }}
+
               </details>
           edit-mode: replace
