--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v2
-      - uses: normanrz/spec-prod@patch-1
+      - uses: ome/spec-prod@main
         with:
           GH_PAGES_BRANCH: gh-pages
           VALIDATE_LINKS: false
