--- a/rfc/4/pixi.toml
+++ b/rfc/4/pixi.toml
@@ -1,8 +1,8 @@
 [project]
 name = "ngff-anatomical-orientation"
-version = "0.1.0"
+version = "0.2.0"
 description = "Build the model, schema, language bindings for the NGFF axis anatomical orientation proposal"
-authors = ["Matt McCormick <matt.mccormick@kitware.com>"]
+authors = ["Matt McCormick <matt@fideus.io>"]
 channels = ["conda-forge"]
 platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 
@@ -17,4 +17,4 @@ gen-all = { depends-on = ["gen-markdown", "gen-json-schema", "gen-pydantic", "ge
 python = ">=3.12.4,<4"
 
 [pypi-dependencies]
-linkml = ">=1.8.1, <2"
+linkml = ">=1.9.2, <2"
