--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,8 @@
-[submodule "0.1"]
-	path = 0.1
-	url = https://github.com/ome/ngff
-	branch = v0.1
-[submodule "0.2"]
-	path = 0.2
-	url = https://github.com/ome/ngff
-	branch = v0.2
-[submodule "0.3"]
-	path = 0.3
-	url = https://github.com/ome/ngff
-	branch = v0.3
-[submodule "0.4"]
-	path = 0.4
-	url = https://github.com/ome/ngff
-	branch = v0.4
+[submodule "0.6.dev2"]
+	path = specifications/0.6.dev2
+	url = https://github.com/jo-mueller/ngff-spec
+	branch = main
 [submodule "0.5"]
-	path = 0.5
-	url = https://github.com/ome/ngff
-	branch = v0.5
-[submodule "latest"]
-	path = latest
-	url = https://github.com/ome/ngff
-	branch = v0.5
+	path = specifications/0.5
+	url = https://github.com/jo-mueller/ngff-spec
+	branch = 0.5
