--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,16 @@
+[submodule "Dev"]
+	path = specifications/0.6.dev3
+	url = https://github.com/ome/ngff-spec
+	branch = main
 [submodule "0.6.dev2"]
 	path = specifications/0.6.dev2
 	url = https://github.com/ome/ngff-spec
-	branch = 5650481b4d259ca4b43253f7c87491290d92626f
+	branch = 0.6.dev2
 [submodule "0.5"]
 	path = specifications/0.5
 	url = https://github.com/jo-mueller/ngff-spec
 	branch = 0.5
+[submodule "specifications/0.6.dev3"]
+	path = specifications/0.6.dev3
+	url = https://github.com/ome/ngff-spec
+	branch = main
