--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -17,4 +17,4 @@ python:
   install:
     - requirements: requirements.txt
     - method: pip
-      path: specifications/0.6.dev2
+      path: specifications/Dev
