--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Dev"]
 	path = specifications/Dev
-	url = https://github.com/ome/ngff-spec
+	url = https://github.com/jo-mueller/ngff-spec
 	branch = generated-files-in-subdirs
 ; [submodule "0.6.dev2"]
 ; 	path = specifications/0.6.dev2
