--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,11 @@
 	path = specifications/0.5
 	url = https://github.com/jo-mueller/ngff-spec
 	branch = 0.5
+
+[submodule "latest"]
+	path = specifications/latest
+	url = https://github.com/jo-mueller/ngff-spec
+	branch = 0.5
 [submodule "0.4"]
 	path = specifications/0.4
 	url = https://github.com/jo-mueller/ngff-spec
@@ -27,3 +32,7 @@
 	url = https://github.com/jo-mueller/ngff-spec
 	branch = 0.1
 
+[submodule "specifications/latest"]
+	path = specifications/latest
+	url = https://github.com/jo-mueller/ngff-spec
+	branch = 0.5
