install deps from correct location

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -17,4 +17,4 @@ python:
   install:
     - requirements: requirements.txt
     - method: pip
-      path: specifications/Dev
+      path: specifications/dev
