--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,6 +4,7 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.10"
+    nodejs: "22"
 
 submodules:
   include: all
@@ -15,3 +16,5 @@ sphinx:
 python:
   install:
     - requirements: requirements.txt
+    - method: pip
+      path: specifications/dev
